// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandleLogin matches snapshot with logged in user profile 1`] = `
Array [
  <div
    className={undefined}
  >
    <div
      aria-describedby={null}
      className="MuiAvatar-root-44"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title={null}
    />
    <button
      aria-owns={null}
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-colorInherit-22"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        Test name
      </span>
      <span
        className="MuiTouchRipple-root-30"
      />
    </button>
  </div>,
  <div
    data-placement={undefined}
    style={
      Object {
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "zIndex": 1,
      }
    }
  >
    <div
      className="MuiPaper-root-47 MuiPaper-elevation2-51 MuiPaper-rounded-48"
      id="menu-list-grow"
      style={
        Object {
          "opacity": 0,
          "transform": "scale(0.75, 0.5625)",
          "transformOrigin": "0 0 0",
        }
      }
    >
      <ul
        className="MuiList-root-74 MuiList-padding-75"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="menu"
      >
        <li
          className="MuiButtonBase-root-27 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-gutters-87 MuiListItem-button-88 MuiMenuItem-root-78"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Profile
          <span
            className="MuiTouchRipple-root-30"
          />
        </li>
        <li
          className="MuiButtonBase-root-27 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-gutters-87 MuiListItem-button-88 MuiMenuItem-root-78"
          onBlur={[Function]}
          onClick={[MockFunction]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          Logout
          <span
            className="MuiTouchRipple-root-30"
          />
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`HandleLogin matches snapshot with logged out user 1`] = `
<button
  className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-colorInherit-22"
  disabled={false}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-2"
  >
    Login
  </span>
  <span
    className="MuiTouchRipple-root-30"
  />
</button>
`;
